--- a/configs/pretext/carla_pretext_msl.yml
+++ b/configs/pretext/carla_pretext_msl.yml
@@ -5,7 +5,15 @@ setup: pretext
 backbone: resnet_ts
 model_kwargs:
    head: mlp
-   features_dim: 4
+   features_dim: 128  # Output feature dimension for the head
+
+transformer_kwargs:
+   in_channels: 55
+   seq_len: 200
+   embed_dim: 8
+   num_heads: 2
+   num_layers: 2
+
 res_kwargs:
   in_channels: 55
   mid_channels: 4
@@ -27,7 +35,7 @@ optimizer_kwargs:
    #nesterov: False
    #momentum: 0.9
    lr: 0.1
-   weight_decay: 0.01
+   weight_decay: 0.001
 scheduler: cosine
 scheduler_kwargs:
    lr_decay_rate: 0.01
