--- a/configs/pretext/carla_pretext_msl.yml
+++ b/configs/pretext/carla_pretext_msl.yml
@@ -15,8 +15,10 @@ transformer_kwargs:
    num_layers: 2
 
 res_kwargs:
-  in_channels: 55
-  mid_channels: 4
+   in_channels: 55
+   mid_channels: 4
+   dropout_p: 0.1
+
 
 # Dataset
 train_db_name: MSL
@@ -34,8 +36,8 @@ optimizer: adam
 optimizer_kwargs:
    #nesterov: False
    #momentum: 0.9
-   lr: 0.1
-   weight_decay: 0.001
+   lr: 0.001
+   weight_decay: 0.00001
 scheduler: cosine
 scheduler_kwargs:
    lr_decay_rate: 0.01
